--- a/scss/partials/_modal.scss
+++ b/scss/partials/_modal.scss
@@ -229,6 +229,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    overflow-y: auto;
 
     span {
       flex: 1;
@@ -243,7 +244,7 @@
   }
 
   .boton-confirmar {
-    @include btn-mas-info;
+    @include btn-link;
   }
 
   .boton-cancelar {
@@ -268,6 +269,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     h3 {
       font-weight: $bold;
@@ -330,7 +332,7 @@
   }
 
   .boton-confirmar {
-    @include btn-mas-info;
+    @include btn-link;
   }
 
   .boton-cancelar {
@@ -354,6 +356,6 @@
   }
 
   .boton-ok {
-    @include btn-mas-info;
+    @include btn-link;
   }
 }
