--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -87,15 +87,29 @@ nav {
     .menu-burguer {
       display: none;
       flex-direction: column;
+      align-items: center;
       cursor: pointer;
-    }
+      background-color: transparent;
+      border: none;
+      outline: none;
+      box-shadow: none;
 
-    .line {
-      width: 30px;
-      height: 3px;
-      background-color: $color-blanco;
-      margin: 3.5px 0;
-      border-radius: 5px;
+      &:focus {
+        outline: none;
+      }
+
+      &:active {
+        outline: none;
+      }
+
+      .linea {
+        width: 30px;
+        height: 3px;
+        background-color: $color-negro;
+        margin: 3.5px 10px;
+        border-radius: 5px;
+        transition: transform 0.3s ease;
+      }
     }
   }
 }
