--- a/scss/partials/_productos.scss
+++ b/scss/partials/_productos.scss
@@ -12,56 +12,61 @@
     margin-top: 10px;
     @include margin-b;
     gap: 30px;
-  }
 
-  .productos-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: $color-blanco;
-    padding: 30px;
-    margin-bottom: 30px;
-    border-radius: $radius-l;
-    filter: drop-shadow(0px 0px 10px #00000033);
-    ;
-
-    img {
-      height: 400px;
-      width: 300px;
-      object-fit: contain;
-    }
-
-    .productos-card-texto {
+    .productos-card {
       display: flex;
       flex-direction: column;
       align-items: center;
-      flex-grow: 1;
+      background-color: $color-blanco;
+      padding: 30px;
+      margin-bottom: 30px;
+      border-radius: $radius-l;
+      filter: drop-shadow(0px 0px 10px #00000033);
+      ;
 
-      h2 {
+      img {
+        height: 400px;
         width: 300px;
-        margin-top: 10px;
-        font-size: $grande;
-        font-weight: $extra-bold;
-        text-transform: uppercase;
-        text-align: center;
-        text-wrap: balance;
+        object-fit: contain;
       }
 
-      p {
+      .productos-card-texto {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-grow: 1;
+
+        h2 {
+          width: 300px;
+          margin-top: 10px;
+          font-size: $grande;
+          font-weight: $extra-bold;
+          text-transform: uppercase;
+          text-align: center;
+          text-wrap: balance;
+        }
+
+        p {
+          width: 300px;
+          text-align: center;
+          margin-top: auto;
+        }
+      }
+
+      .productos-card-btn {
+        display: flex;
+        justify-content: center;
         width: 300px;
-        text-align: center;
         margin-top: auto;
-      }
-    }
 
-    .productos-card-btn {
-      margin-top: auto;
-
-      button {
-        @include btn-mas-info;
+        button {
+          @include btn-mas-info;
+        }
       }
     }
   }
+
+
 }
 
 .contenedor-construccion {
